--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <!-- Own css -->
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive-style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsive-style.css">
 
 </head>
 
