--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="row align-items-center">
           <div class="col-lg-7 col-md-12 mb-lg-0 mb-5">
             <div class="card border-0">
-              <img src="Images/img2.jpg" class="img-fluid">
+              <img src="img2.jpg" class="img-fluid">
             </div>
           </div>
           <div class="col-lg-5 col-md-12 text-sec">
@@ -158,7 +158,7 @@
           </div>
           <div class="col-lg-7 col-md-12">
             <div class="card border-0">
-              <img src="Images/img-2.png" class="img-fluid">
+              <img src="img-2.png" class="img-fluid">
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
         <div class="row pt-5">
           <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="Images/Rainbow.jpg" class="img-fluid">
+              <img src="Rainbow.jpg" class="img-fluid">
               <div class="pt-3">
                 <h4>Rainbow Vegetable Sandwich</h4>
                 <p>Time: 15 - 20 Minutes | Serves: 1</p>
@@ -216,7 +216,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="Images/Burgir.jpg" class="img-fluid">
+              <img src="Burgir.jpg" class="img-fluid">
               <div class="pt-3">
                 <h4>Vegetarian Burgir</h4>
                 <p>Time: 35 - 40 Minutes | Serves: 1</p>
@@ -227,7 +227,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="Images/Rasp.jpg" class="img-fluid">
+              <img src="Rasp.jpg" class="img-fluid">
               <div class="pt-3">
                 <h4>Raspberry Stufffed French Toast</h4>
                 <p>Time: 15 - 20 Minutes | Serves: 1</p>
@@ -263,7 +263,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="carousel-caption">
-                    <img src="images/review/review-1.jpg" alt="Review 1">
+                    <img src="review/review-1.jpg" alt="Review 1">
                     <p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
                       live the blind texts."</p>
                     <h5>Johnathan Doe - UX Designer</h5>
@@ -271,7 +271,7 @@
                 </div>
                 <div class="carousel-item">
                   <div class="carousel-caption">
-                    <img src="images/review/review-2.jpg" alt="Review 2">
+                    <img src="review/review-2.jpg" alt="Review 2">
                     <p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
                       live the blind texts."</p>
                     <h5>Maccy Doe - UX Designer</h5>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="carousel-item">
                   <div class="carousel-caption">
-                    <img src="images/review/review-3.jpg" alt="Review 3">
+                    <img src="review/review-3.jpg" alt="Review 3">
                     <p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                       there live the blind texts."</p>
                     <h5>Johnathan Doe - UX Designer</h5>
